# flet-practice

./: .gitignore  README.md  pyproject.toml
src/: app.py
