[tool.poetry]
name = "flet-practice"
version = "0.1.0"
description = ""
authors = ["Your Name"]


[tool.poetry.dependencies]
python = ">=3.10, <4.0"
flet = "*"
kaleido = "=0.2.1"
matplotlib = "*"
numpy = "*"
pandas = "*"
pillow = "*"
plotly = "*"
polars = "*"
pyyaml = "*"
scipy = "*"
tqdm = "*"


[tool.poetry.group.dev.dependencies]
autopep8 = "*"
